# RAGWISE

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/schemas/: schemas.py
backend/app/services/: rag_service.py
evaluations/: baseline_comparison.py  evaluate_ragas.py  generate_dataset.py  hallucination_test.py  run_ragas.py  test_set.json
evaluations/rag_eval_dataset/: data-00000-of-00001.arrow  dataset_info.json  state.json
frontend/: Dockerfile  app.py
rag/: chain.py  embeddings.py  loader.py  reranker.py  retriever.py  splitter.py  vectorstore.py
tests/: test_backend.py  test_chunking.py  test_frontend.py  test_loader.py  test_retrieval.py
