[tool.poetry]
name = "ragwise"
version = "0.1.0"
description = "企业级智能文档知识库系统"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
langchain = "^1.2.15"
langchain-community = "^0.4.1"
langchain-openai = "^1.1.12"
chromadb = "^1.5.7"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
fastapi = "^0.135.3"
uvicorn = "^0.44.0"
gradio = "^6.11.0"
pypdf = "^6.9.2"
python-docx = "^1.2.0"
markdown = "^3.10.2"
ragas = "^0.4.3"
requests = "^2.33.1"
rank-bm25 = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
